test/stmt/statements.swift
@@ -402,7 +402,7 @@ func test_is_as_patterns() {
 // <rdar://problem/21387308> Fuzzing SourceKit: crash in Parser::parseStmtForEach(...)
 func matching_pattern_recursion() {
   switch 42 {
-  case {  // expected-error {{expression pattern of type '() -> ()' cannot match values of type 'Int'}}
+  case {  // expected-error {{cannot convert value of type '() -> ()' to expected argument type 'Range<_>'}}
       for i in zs {
       }
   }: break
